# ModManagerED

./: .gitignore  .prettierignore  .prettierrc  LICENSE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  uno.config.ts  vite.config.js
src/: app.css  app.html  app.scss
src-tauri/: Cargo.toml  database_settings.dev.yml  database_settings.yml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/macros/: .ignore  Cargo.toml
src-tauri/macros/src/: command_gen.rs  data_model.rs  generator.rs  lib.rs
src-tauri/macros/tests/: general.rs
src-tauri/src/: database_id.rs  main.rs  manager_error.rs  schema.rs
src-tauri/src/commands/: game_instance.rs  game_instance_commands.rs  mod.rs  mod_commands.rs  mod_management.rs  profile_commands.rs
src-tauri/src/plugins/: database.rs  database_trait.rs  mod.rs  steamlocate.rs
src-tauri/src/plugins/modengine_manager/: mod.rs  mod_engine_config.rs
src-tauri/utility/: Cargo.toml
src-tauri/utility/src/: lib.rs
src/lib/: commands.ts
src/lib/components/: ActionButton.svelte  Collapse.svelte  FileSelectButton.svelte  ModContent.svelte  Navigation.svelte  ProfileSelector.svelte  Switch.svelte  Toster.svelte
src/lib/stores/: game_instance.ts  mods.ts  profiles.ts
src/lib/utilities/: cn.ts  rpc.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/mods/: +page.svelte  +page.ts  ModContent.svelte
src/routes/mods/[id]/: +page.svelte  +page.ts
src/routes/mods/create/: +page.svelte
src/routes/mods/edit/: +page.ts
src/routes/profiles/: +page.svelte  +page.ts
src/routes/profiles/[id]/: +page.svelte  +page.ts
src/routes/profiles/create/: +page.svelte
src/routes/profiles/edit/: +page.ts
src/routes/settings/: +page.svelte  +page.ts
