[package]
name = "modmanagered"
version = "0.0.0"
description = "A Tauri App"
authors = ["HappyOri", "Jalandral"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["macros", "utility"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "1.5.4", features = ["kv-rocksdb"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.86"
thiserror = "1.0.63"
async-trait = "0.1.81"
macros = { path = "./macros" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
