[package]
name = "goldenorder"
version = "0.0.0"
description = "Mod Manager for Elden Ring"
authors = ["HappyOri"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["macros", "utility"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-open", "shell-open"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
toml = "0.8.19"
surrealdb = { version = "1.5.4", features = ["kv-rocksdb"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.86"
thiserror = "1.0.63"
async-trait = "0.1.81"
steamlocate = "2.0.0-beta.2"
subprocess = "0.2.9"
dunce = "1.0.5"
window-shadows = "0.2.2"
window-vibrancy = "0.4.3"

macros = { path = "./macros" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
